--- a/admin/index.html
+++ b/admin/index.html
@@ -3,55 +3,328 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LECOMAX Admin Login</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Lecomax Admin</title>
     <style>
-        body { display: flex; align-items: center; justify-content: center; height: 100vh; background: var(--bg); }
-        .login-card { background: var(--surface); padding: 40px; border-radius: var(--radius); box-shadow: var(--shadow); width: 100%; max-width: 400px; text-align: center; }
-        .login-card h1 { margin-bottom: 24px; font-size: 24px; }
-        .input-group { margin-bottom: 16px; text-align: left; }
-        .input-group label { display: block; margin-bottom: 8px; font-size: 14px; font-weight: 500; }
-        .input-group input { width: 100%; padding: 10px; border: 1px solid var(--border); border-radius: 8px; }
-        .btn-login { width: 100%; padding: 12px; background: var(--primary); color: white; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; }
-        .btn-login:hover { background: var(--primary-hover); }
-        .error-msg { color: var(--danger); font-size: 14px; margin-bottom: 16px; display: none; }
+        :root {
+            color-scheme: light;
+            --bg: #eff5ff;
+            --card: #ffffff;
+            --text: #0f172a;
+            --muted: #6b7280;
+            --border: #dbe7ff;
+            --primary: #1d4ed8;
+            --primary-hover: #1e40af;
+            --danger: #dc2626;
+            --success: #16a34a;
+            --shadow: 0 16px 40px rgba(29, 78, 216, 0.14);
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            min-height: 100vh;
+            font-family: Inter, Segoe UI, Roboto, Arial, sans-serif;
+            background: radial-gradient(circle at 20% 0%, #dbeafe 0%, #eff6ff 35%, var(--bg) 100%);
+            color: var(--text);
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 24px;
+        }
+
+        .card {
+            background: var(--card);
+            border: 1px solid var(--border);
+            border-radius: 16px;
+            box-shadow: var(--shadow);
+            animation: fadeUp 0.45s ease;
+        }
+
+        .login-wrap {
+            min-height: calc(100vh - 48px);
+            display: grid;
+            place-items: center;
+        }
+
+        .login-card {
+            width: 100%;
+            max-width: 420px;
+            padding: 28px;
+        }
+
+        .title {
+            margin: 0 0 8px;
+            font-size: 1.5rem;
+        }
+
+        .subtitle {
+            margin: 0 0 20px;
+            color: var(--muted);
+            font-size: 0.95rem;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-size: 0.9rem;
+            font-weight: 600;
+        }
+
+        .field {
+            margin-bottom: 12px;
+        }
+
+        input[type="email"],
+        input[type="password"] {
+            width: 100%;
+            height: 46px;
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            padding: 0 12px;
+            font-size: 1rem;
+            outline: none;
+            transition: 0.2s ease;
+        }
+
+        input[type="email"]:focus,
+        input[type="password"]:focus {
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.15);
+        }
+
+        .btn {
+            width: 100%;
+            height: 46px;
+            border: 0;
+            border-radius: 10px;
+            background: var(--primary);
+            color: #fff;
+            font-size: 0.95rem;
+            font-weight: 700;
+            cursor: pointer;
+            margin-top: 14px;
+            transition: transform 0.2s ease, background 0.2s ease;
+        }
+
+        .btn:hover {
+            background: var(--primary-hover);
+            transform: translateY(-1px);
+        }
+
+        .error {
+            color: var(--danger);
+            font-size: 0.9rem;
+            min-height: 20px;
+            margin-top: 10px;
+        }
+
+        .dashboard {
+            display: none;
+            padding-top: 8px;
+            animation: fadeUp 0.45s ease;
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 18px;
+        }
+
+        .header h1 {
+            margin: 0;
+            font-size: 1.4rem;
+        }
+
+        .logout {
+            border: 1px solid var(--border);
+            background: #fff;
+            color: var(--text);
+            border-radius: 10px;
+            padding: 10px 14px;
+            font-weight: 600;
+            cursor: pointer;
+        }
+
+        .stats {
+            display: grid;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+            gap: 14px;
+        }
+
+        .stat {
+            padding: 20px;
+        }
+
+        .stat p {
+            margin: 0;
+            color: var(--muted);
+            font-size: 0.88rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.04em;
+        }
+
+        .stat h2 {
+            margin: 10px 0 4px;
+            font-size: 1.8rem;
+        }
+
+        .trend {
+            font-size: 0.9rem;
+            color: var(--success);
+            font-weight: 600;
+        }
+
+        @media (max-width: 820px) {
+            .stats {
+                grid-template-columns: 1fr;
+            }
+
+            .header {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+            }
+        }
+
+        @keyframes fadeUp {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="login-card">
-        <h1>LECOMAX Admin</h1>
-        <div id="error-msg" class="error-msg">Invalid credentials</div>
-        <form id="login-form">
-            <div class="input-group">
-                <label>Username</label>
-                <input type="text" id="username" required>
+    <div class="container">
+        <section id="loginView" class="login-wrap">
+            <div class="card login-card">
+                <h1 class="title">Lecomax Admin</h1>
+                <p class="subtitle">Sign in to view your dashboard.</p>
+                <div class="field">
+                    <label for="email">Email</label>
+                    <input id="email" type="email" placeholder="admin@lecomax.com" autocomplete="off">
+                </div>
+                <div class="field">
+                    <label for="password">Password</label>
+                    <input id="password" type="password" placeholder="••••••••••" autocomplete="off">
+                </div>
+                <button id="loginBtn" class="btn">Login</button>
+                <div id="errorMsg" class="error"></div>
             </div>
-            <div class="input-group">
-                <label>Password</label>
-                <input type="password" id="password" required>
+        </section>
+
+        <section id="dashboardView" class="dashboard">
+            <div class="header">
+                <h1>Dashboard (Demo Stats)</h1>
+                <button id="logoutBtn" class="logout">Logout</button>
             </div>
-            <button type="submit" class="btn-login">Login</button>
-        </form>
+
+            <div class="stats">
+                <article class="card stat">
+                    <p>Orders</p>
+                    <h2 id="ordersValue">0</h2>
+                    <span class="trend">+8.2% this week</span>
+                </article>
+                <article class="card stat">
+                    <p>Visitors</p>
+                    <h2 id="visitorsValue">0</h2>
+                    <span class="trend">+4.6% this week</span>
+                </article>
+                <article class="card stat">
+                    <p>Revenue</p>
+                    <h2 id="revenueValue">$0</h2>
+                    <span class="trend">+10.9% this week</span>
+                </article>
+                <article class="card stat">
+                    <p>Products Count</p>
+                    <h2 id="productsValue">0</h2>
+                    <span class="trend">+2 new this week</span>
+                </article>
+            </div>
+        </section>
     </div>
 
     <script>
-        document.getElementById('login-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const u = document.getElementById('username').value;
-            const p = document.getElementById('password').value;
-            
-            const res = await fetch('/api/login', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ username: u, password: p })
-            });
-            
-            if (res.ok) {
-                window.location.href = '/admin/index.html';
-            } else {
-                document.getElementById('error-msg').style.display = 'block';
+        const ADMIN_EMAIL = 'admin@lecomax.com';
+        const ADMIN_PASSWORD = 'lecomax1970';
+        const STORAGE_KEY = 'lecomax_admin_logged_in';
+
+        const loginView = document.getElementById('loginView');
+        const dashboardView = document.getElementById('dashboardView');
+        const emailInput = document.getElementById('email');
+        const passwordInput = document.getElementById('password');
+        const loginBtn = document.getElementById('loginBtn');
+        const logoutBtn = document.getElementById('logoutBtn');
+        const errorMsg = document.getElementById('errorMsg');
+
+        function fakeStats() {
+            const orders = Math.floor(150 + Math.random() * 120);
+            const visitors = Math.floor(2200 + Math.random() * 1800);
+            const revenue = Math.floor(9000 + Math.random() * 9000);
+            const products = Math.floor(180 + Math.random() * 40);
+
+            document.getElementById('ordersValue').textContent = orders.toLocaleString();
+            document.getElementById('visitorsValue').textContent = visitors.toLocaleString();
+            document.getElementById('revenueValue').textContent = '$' + revenue.toLocaleString();
+            document.getElementById('productsValue').textContent = products.toLocaleString();
+        }
+
+        function showDashboard() {
+            loginView.style.display = 'none';
+            dashboardView.style.display = 'block';
+            fakeStats();
+        }
+
+        function showLogin() {
+            dashboardView.style.display = 'none';
+            loginView.style.display = 'grid';
+            emailInput.value = '';
+            passwordInput.value = '';
+            errorMsg.textContent = '';
+            emailInput.focus();
+        }
+
+        function tryLogin() {
+            const email = emailInput.value.trim().toLowerCase();
+            const password = passwordInput.value;
+
+            if (email === ADMIN_EMAIL && password === ADMIN_PASSWORD) {
+                localStorage.setItem(STORAGE_KEY, 'true');
+                showDashboard();
+                return;
             }
+            errorMsg.textContent = 'Invalid credentials';
+        }
+
+        loginBtn.addEventListener('click', tryLogin);
+        emailInput.addEventListener('keydown', (event) => {
+            if (event.key === 'Enter') tryLogin();
         });
+        passwordInput.addEventListener('keydown', (event) => {
+            if (event.key === 'Enter') tryLogin();
+        });
+
+        logoutBtn.addEventListener('click', () => {
+            localStorage.removeItem(STORAGE_KEY);
+            showLogin();
+        });
+
+        if (localStorage.getItem(STORAGE_KEY) === 'true') {
+            showDashboard();
+        } else {
+            showLogin();
+        }
     </script>
 </body>
 </html>
