--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LECOMAX Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZ01HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-9N1CPZ01HG');
+</script>
 </head>
 <body>
     <main class="dashboard-page" id="dashboardContent" style="display:none;">
@@ -22,7 +31,7 @@
                 <h2 data-counter="189430" data-prefix="" data-suffix="">0</h2>
             </article>
             <article class="stat-card">
-                <span>Today’s visitors</span>
+                <span>Today's visitors</span>
                 <h2 data-counter="3472" data-prefix="" data-suffix="">0</h2>
             </article>
             <article class="stat-card">
@@ -39,3 +48,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
