--- a/checkout-fr.html
+++ b/checkout-fr.html
@@ -1,23 +1,16 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZQ1HG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('consent', 'default', {
-    ad_storage: 'denied',
-    analytics_storage: 'denied',
-    ad_user_data: 'denied',
-    ad_personalization: 'denied',
-    wait_for_update: 500
-  });
-  gtag('js', new Date());
+﻿<!DOCTYPE html>
 
-  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
-</script>
-  <meta charset="UTF-8" />
+
+
+
+
+
+
+
+
+  <html lang="fr">
+<head>
+<meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Finaliser ma commande en sécurité - Lecomax</title>
   <meta name="description" content="Finalisez votre commande en toute sécurité avec Lecomax : protection avancée, confirmation rapide et livraison fiable au Maroc." />
@@ -34,6 +27,15 @@
   <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZ01HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-9N1CPZ01HG');
+</script>
 </head>
 <body>
   <div class="announcement">
@@ -48,8 +50,11 @@
     </div>
   </div>
 
-  <header class="header" id="header">
-    <div class="container header__inner">
+  
+
+
+
+<div class="container header__inner">
       <a class="brand" href="index.html">
         <span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span>
       </a>
@@ -162,3 +167,9 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 </body>
 </html>
+
+
+
+
+
+
