--- a/help-center-fr.html
+++ b/help-center-fr.html
@@ -1,23 +1,16 @@
-<!doctype html>
-<html lang="fr">
-<head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZQ1HG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('consent', 'default', {
-    ad_storage: 'denied',
-    analytics_storage: 'denied',
-    ad_user_data: 'denied',
-    ad_personalization: 'denied',
-    wait_for_update: 500
-  });
-  gtag('js', new Date());
+﻿<!doctype html>
 
-  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
-</script>
-  <meta charset="utf-8" />
+
+
+
+
+
+
+
+
+  <html lang="fr">
+<head>
+<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Centre d'aide — Lecomax</title>
   <meta name="description" content="Obtenez de l'aide sur les commandes, la livraison et le paiement dans le centre d'aide Lecomax." />
@@ -37,6 +30,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZ01HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-9N1CPZ01HG');
+</script>
 </head>
 <body>
   <div class="topbar">
@@ -47,8 +49,11 @@
     </div>
   </div>
 
-  <header class="header">
-    <div class="container header__inner">
+  
+
+
+
+<div class="container header__inner">
       <a class="brand" href="index.html">
         
         <span class="brand__text">
@@ -108,4 +113,10 @@ s0.parentNode.insertBefore(s1,s0);
   <script src="cookie-consent.js"></script>
 </body>
 </html>
+
+
+
+
+
+
 
