--- a/help-center.html
+++ b/help-center.html
@@ -1,35 +1,28 @@
-<!doctype html>
-<html lang="en">
-<head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZQ1HG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('consent', 'default', {
-    ad_storage: 'denied',
-    analytics_storage: 'denied',
-    ad_user_data: 'denied',
-    ad_personalization: 'denied',
-    wait_for_update: 500
-  });
-  gtag('js', new Date());
+﻿<!doctype html>
 
-  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
-</script>
-  <meta charset="utf-8" />
+
+
+
+
+
+
+
+
+  <html lang="en">
+<head>
+<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Help Center — Lecomax</title>
+  <title>Help Center - Lecomax</title>
   <meta name="description" content="Get support for orders, shipping, delivery timelines, and payment questions at Lecomax Help Center." />
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="https://lecomax.com/help-center.html" />
-  <meta property="og:title" content="Help Center — Lecomax" />
+  <meta property="og:title" content="Help Center - Lecomax" />
   <meta property="og:description" content="Get support for orders, shipping, delivery timelines, and payment questions at Lecomax Help Center." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lecomax.com/help-center.html" />
   <meta property="og:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Help Center — Lecomax" />
+  <meta name="twitter:title" content="Help Center - Lecomax" />
   <meta name="twitter:description" content="Get support for orders, shipping, delivery timelines, and payment questions at Lecomax Help Center." />
   <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <meta name="theme-color" content="#ffffff" />
@@ -37,6 +30,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZ01HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-9N1CPZ01HG');
+</script>
 </head>
 <body>
   <div class="topbar">
@@ -47,8 +49,11 @@
     </div>
   </div>
 
-  <header class="header">
-    <div class="container header__inner">
+  
+
+
+
+<div class="container header__inner">
       <a class="brand" href="index.html">
         
         <span class="brand__text">
@@ -108,6 +113,13 @@ s0.parentNode.insertBefore(s1,s0);
   <script src="cookie-consent.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
 
 
 
