--- a/privacy.html
+++ b/privacy.html
@@ -1,23 +1,16 @@
-<!doctype html>
-<html lang="en">
-<head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZQ1HG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('consent', 'default', {
-    ad_storage: 'denied',
-    analytics_storage: 'denied',
-    ad_user_data: 'denied',
-    ad_personalization: 'denied',
-    wait_for_update: 500
-  });
-  gtag('js', new Date());
+﻿<!doctype html>
 
-  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
-</script>
-  <meta charset="utf-8" />
+
+
+
+
+
+
+
+
+  <html lang="en">
+<head>
+<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Privacy Policy — Lecomax</title>
   <meta name="description" content="Lecomax privacy policy explaining what data we collect, how we use it, and your customer rights." />
@@ -34,12 +27,24 @@
   <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZ01HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-9N1CPZ01HG');
+</script>
 </head>
 <body>
   <div class="topbar"><div class="container topbar__inner"><div class="topbar__left"><a href="index.html" class="toplink"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg> Back to Store</a></div></div></div>
 
-  <header class="header">
-    <div class="container header__inner">
+  
+
+
+
+<div class="container header__inner">
       <a class="brand" href="index.html">
         
         <span class="brand__text"><span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span><span class="brand__sub">Privacy</span></span>
@@ -86,6 +91,12 @@ s0.parentNode.insertBefore(s1,s0);
   <script src="cookie-consent.js"></script>
 </body>
 </html>
+
+
+
+
+
+
 
 
 
