--- a/track-order.html
+++ b/track-order.html
@@ -1,35 +1,28 @@
-<!doctype html>
-<html lang="en">
-<head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZQ1HG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('consent', 'default', {
-    ad_storage: 'denied',
-    analytics_storage: 'denied',
-    ad_user_data: 'denied',
-    ad_personalization: 'denied',
-    wait_for_update: 500
-  });
-  gtag('js', new Date());
+﻿<!doctype html>
 
-  gtag('config', 'G-9N1CPZQ1HG', { anonymize_ip: true });
-</script>
-  <meta charset="utf-8" />
+
+
+
+
+
+
+
+
+  <html lang="en">
+<head>
+<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Track Order — Lecomax</title>
+  <title>Track Order - Lecomax</title>
   <meta name="description" content="Track your Lecomax order status quickly using your order details." />
   <meta name="robots" content="noindex,follow" />
   <link rel="canonical" href="https://lecomax.com/track-order.html" />
-  <meta property="og:title" content="Track Order — Lecomax" />
+  <meta property="og:title" content="Track Order - Lecomax" />
   <meta property="og:description" content="Track your Lecomax order status quickly using your order details." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lecomax.com/track-order.html" />
   <meta property="og:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Track Order — Lecomax" />
+  <meta name="twitter:title" content="Track Order - Lecomax" />
   <meta name="twitter:description" content="Track your Lecomax order status quickly using your order details." />
   <meta name="twitter:image" content="https://raw.githubusercontent.com/lecomaxstore-prog/lecomax/refs/heads/main/images/WirelessGamingController/1.avif" />
   <link rel="stylesheet" href="styles.css" />
@@ -77,6 +70,15 @@
           display: none;
         }
   </style>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1CPZ01HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-9N1CPZ01HG');
+</script>
 </head>
 <body>
   <div class="topbar">
@@ -85,8 +87,11 @@
     </div>
   </div>
 
-  <header class="header">
-    <div class="container header__inner">
+  
+
+
+
+<div class="container header__inner">
       <a class="brand" href="index.html">
         <span class="brand__text"><span class="brand__name"><span class="brand__accent">L'</span>ECOMAX</span><span class="brand__sub">Tracking</span></span>
       </a>
@@ -163,4 +168,11 @@ s0.parentNode.insertBefore(s1,s0);
   <script src="cookie-consent.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
 
