--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -28,19 +28,19 @@
         <section class="stats-grid">
             <article class="stat-card">
                 <span>Total visitors</span>
-                <h2 data-counter="189430" data-prefix="" data-suffix="">0</h2>
+                <h2 data-counter-key="totalVisitors" data-prefix="" data-suffix="">0</h2>
             </article>
             <article class="stat-card">
                 <span>Today's visitors</span>
-                <h2 data-counter="3472" data-prefix="" data-suffix="">0</h2>
+                <h2 data-counter-key="todaysVisitors" data-prefix="" data-suffix="">0</h2>
             </article>
             <article class="stat-card">
                 <span>Total orders</span>
-                <h2 data-counter="5840" data-prefix="" data-suffix="">0</h2>
+                <h2 data-counter-key="totalOrders" data-prefix="" data-suffix="">0</h2>
             </article>
             <article class="stat-card">
                 <span>Total revenue</span>
-                <h2 data-counter="462780" data-prefix="$" data-suffix="">0</h2>
+                <h2 data-counter-key="totalRevenue" data-prefix="MAD " data-suffix="">0</h2>
             </article>
         </section>
     </main>
